--- a/lib/ash_table_web/components/layouts/root.html.heex
+++ b/lib/ash_table_web/components/layouts/root.html.heex
@@ -11,7 +11,7 @@
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
     </script>
   </head>
-  <body class="bg-white antialiased text-sm font-light">
+  <body class="bg-white antialiased text-sm font-light p-4">
     <%= @inner_content %>
   </body>
 </html>
